# ftdi_driver

./: CMakeLists.txt  README.md
ftdi_module/: CMakeLists.txt  Makefile  Rules.make  ftdi_sio.c
ftdi_sio/: CMakeLists.txt  ftdi_sio.c  ftdi_sio.h  ftdi_sio_ids.h
ftdi_sio_kernel_v5/: CMakeLists.txt  ftdi_sio.h
ftdi_sio_v4/: CMakeLists.txt  Makefile
ftdi_sio_v5/: CMakeLists.txt  ftdi_sio.c
hello_world/: CMakeLists.txt  Makefile  hello_world.c
